# haskell-test-proj

./: .gitignore  README.md  fmt.sh  test-proj.cabal
nix/modules/flake/: devshell.nix  haskell.nix  pre-commit.nix  template.nix
src/: proj.hs
