cabal-version:      2.4
name:               test-proj
version:            0.1.0.0
license:            MIT
copyright:          2025 Harrison Centner
maintainer:         harrisoncent@proton.me
author:             Harrison Centner
category:           Web
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base
    , containers
    , data-default
    , directory
    , filepath
    , finitary
    , logict
    , mmorph
    , mtl
    , optics-core
    , profunctors
    , shower
    , text
    , time
    , transformers

  hs-source-dirs:     src
  default-language:   GHC2021

executable proj
  import:         shared
  hs-source-dirs: src
  main-is:        proj.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
